addsa mauro action in preliminary form

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -1,6 +1,7 @@
 {
   "buttons": {
     "unzip": "unzip",
+    "mauro": "mauro",
     "cancel": "Cancel",
     "close": "Close",
     "copy": "Copy",
@@ -123,6 +124,7 @@
   "permanent": "Permanent",
   "prompts": {
     "unzip": "Unzip",
+    "mauro": "Mauro",
     "copy": "Copy",
     "copyMessage": "Choose the place to copy your files:",
     "currentlyNavigating": "Currently navigating on:",
@@ -218,7 +220,8 @@
       "modify": "Edit files",
       "rename": "Rename or move files and directories",
       "share": "Share files",
-      "unzip": "unzip"
+      "unzip": "unzip",
+      "mauro": "Mauro"
     },
     "permissions": "Permissions",
     "permissionsHelp": "You can set the user to be an administrator or choose the permissions individually. If you select \"Administrator\", all of the other options will be automatically checked. The management of users remains a privilege of an administrator.\n",
