adds open-inline icon (and link) in share dialogs chenges how inline is done /public/..?inline=true -> /public-inline/... so relative links remain inline

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -11,6 +11,7 @@
     "copy": "Copy",
     "copyFile": "Copy file",
     "copyToClipboard": "Copy to clipboard",
+    "openInline": "Open (inline) in new window",
     "copyDownloadLinkToClipboard": "Copy download link to clipboard",
     "create": "Create",
     "delete": "Delete",
